infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-pod
  template:
    metadata:
      labels:
        app: posts-pod
    spec:
      containers:
      - name: posts
        image: harsh253/posts:latest
