infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-pod
  template:
    metadata:
      labels:
        app: comments-pod
    spec:
      containers:
      - name: comments
        image: harsh253/comments

---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector:
    app: comments-pod
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
