infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus-pod
  template:
    metadata:
      labels:
        app: event-bus-pod
    spec:
      containers:
      - name: posts
        image: harsh253/event-bus:latest

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: event-bus-pod
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
