infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-pod
  template:
    metadata:
      labels:
        app: moderation-pod
    spec:
      containers:
      - name: moderation
        image: harsh253/moderation

---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector:
    app: moderation-pod
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
