infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  type: NodePort
  selector:
    app: posts-pod #selecting pod "posts-pod". Matches by label defined in posts-depl
  ports:
    - name: posts-port
      protocol: TCP
      port: 4000 #Run nodePort service on 4000
      targetPort: 4000 #all incoming requests on above port will be redirected to port 4000 (targetPort) running in the pod, posts-pod
