infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-pod
  template:
    metadata:
      labels:
        app: query-pod
    spec:
      containers:
      - name: query
        image: harsh253/query

---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: query-pod
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
